deverlop Operation dislocation - end.

--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -162,6 +162,13 @@ table#wagons-way {
         white-space: nowrap;
     }
 
+
+tr.group,
+tr.group:hover {
+    background-color: #ddd !important;
+    text-align:center;
+    text-transform:uppercase;
+}
 /* -------------------------------- 
 
 cars detali panel 
