--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -164,52 +164,50 @@
     </form>
 </div>
 
-<div id="select_wagon" title="" style="min-height:0px;overflow:hidden;display:none">
+<!--<div id="select_wagon" title="" style="min-height:0px;overflow:hidden;display:none">
     <form id="form_select_wagon" class="form-inline" style="font-size:12px">
         <div class="form-group">
-            <label for="select_wagon_side">Сторона:</label>
-            @*<input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">*@
-            <select class="custom-select form-control mx-sm-3" id="select_wagon_side" name="select_wagon_side">
-                @*<option selected value="1">Голова</option>
-                    <option value="2">Хвост</option>*@
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="select_wagon_side">Кол:</label>
-            <input type="number" class="form-control mx-sm-3" id="select_wagon_count" name="select_wagon_count" style="width:70px" placeholder="">
-            <button class="btn btn-primary" id="select_ok">Ок</button>
-        </div>
-
-        <!-- Allow form submission with keyboard without duplicating the dialog button -->
-        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
-    </form>
+            <label for="select_wagon_side">Сторона:</label>-->
+@*<input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">*@
+<!--<select class="custom-select form-control mx-sm-3" id="select_wagon_side" name="select_wagon_side">-->
+@*<option selected value="1">Голова</option>
+    <option value="2">Хвост</option>*@
+<!--</select>
 </div>
-
-<div id="dislocation_wagon" title="" style="display:none">
+<div class="form-group">
+    <label for="select_wagon_side">Кол:</label>
+    <input type="number" class="form-control mx-sm-3" id="select_wagon_count" name="select_wagon_count" style="width:70px" placeholder="">
+    <button class="btn btn-primary" id="select_ok">Ок</button>
+</div>-->
+<!-- Allow form submission with keyboard without duplicating the dialog button -->
+<!--<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>-->
+<!--<div id="dislocation_wagon" title="" style="display:none">
     <div class="alert" id="dislocation_wagon_alert"></div>
     <form id="form_dislocation_wagon">
         <div class="form-row">
             <div class="col-md-9 mb-2">
-                <label for="dislocation_wagon_way_from" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_way_from:</label>
+                <label for="dislocation_wagon_way_from" class="col-form-label">:</label>
                 <input type="text" class="form-control" id="dislocation_wagon_way_from" name="dislocation_wagon_way_from" disabled="disabled" />
             </div>
             <div class="col-md-3 mb-2">
                 <div class="form-check" style="margin-top:35%">
                     <input type="checkbox" class="form-check-input" id="dislocation_wagon_reverse">
-                    <label class="form-check-label" for="dislocation_wagon_reverse">@IDSRWTResource.title_dislocation_wagon_reverse:</label>
+                    <label class="form-check-label" for="dislocation_wagon_reverse">:</label>
                 </div>
             </div>
         </div>
         <div class="form-row">
             <div class="col-md-9 mb-2">
-                <label for="dislocation_wagon_way" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_way:</label>
+                <label for="dislocation_wagon_way" class="col-form-label">:</label>
                 <select class="form-control" id="dislocation_wagon_way" name="dislocation_wagon_way" required="required"></select>
                 <div class="invalid-feedback">
 
                 </div>
             </div>
             <div class="col-md-3 mb-2">
-                <label for="dislocation_wagon_side" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_side:</label>
+                <label for="dislocation_wagon_side" class="col-form-label">:</label>
                 <select class="form-control" id="dislocation_wagon_side" name="dislocation_wagon_side" required="required"></select>
                 <div class="invalid-feedback">
 
@@ -218,14 +216,14 @@
         </div>
         <div class="form-row">
             <div class="col-md-6 mb-2">
-                <label for="dislocation_wagon_start" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_start:</label>
+                <label for="dislocation_wagon_start" class="col-form-label">:</label>
                 <input type="datetime" class="form-control" id="dislocation_wagon_start" name="dislocation_wagon_start" />
                 <div class="invalid-feedback">
 
                 </div>
             </div>
             <div class="col-md-6 mb-2">
-                <label for="dislocation_wagon_stop" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_stop:</label>
+                <label for="dislocation_wagon_stop" class="col-form-label">:</label>
                 <input type="datetime" class="form-control" id="dislocation_wagon_stop" name="dislocation_wagon_stop" />
                 <div class="invalid-feedback">
 
@@ -234,11 +232,11 @@
         </div>
         <div class="form-row">
 
-        </div>
-        <!-- Allow form submission with keyboard without duplicating the dialog button -->
-        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+        </div>-->
+<!-- Allow form submission with keyboard without duplicating the dialog button -->
+<!--<input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
-</div>
+</div>-->
 
 <div class="cd-operation-detali">
     <div class="container-fluid">
@@ -271,33 +269,27 @@
                                                             </div>
                                                         </div>
                                                         <div class="form-row">
-                                                            <div class="col-xl-12 mb-1 text-left">
-                                                                <label for="operation_detali_dislocation_way_on" class="col-form-label">@IDSRWTResource.title_operation_detali_way_on:</label>
-                                                                <select class="form-control" id="operation_detali_dislocation_way_on" name="operation_detali_dislocation_way_on" required="required"></select>
+                                                            <div class="col-md-4 mb-2">
+                                                                <div class="form-check" style="margin-top:7%">
+                                                                    <input type="checkbox" class="form-check-input" id="operation_detali_dislocation_wagon_reverse">
+                                                                    <label class="form-check-label" for="operation_detali_dislocation_wagon_reverse">@IDSRWTResource.title_operation_detali_reverse:</label>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-md-3 mb-2 text-right">
+                                                                <label for="operation_detali_dislocation_wagon_side" class="col-form-label">@IDSRWTResource.title_operation_detali_side:</label>
+                                                            </div>
+                                                            <div class="col-md-4 mb-2">
+                                                                <select class="form-control" id="operation_detali_dislocation_wagon_side" name="operation_detali_dislocation_wagon_side" required="required"></select>
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
                                                         </div>
-
-                                                        @*<div class="form-row">
-            <div class="col-xl-12 mb-1 text-left">
-                <label for="operation_detali_dislocation_way" class="col-form-label">@IDSRWTResource.title_operation_detali_dislocation_way:</label>
-                <select class="form-control" id="operation_detali_dislocation_way" name="operation_detali_dislocation_way" required="required"></select>
-                <div class="invalid-feedback"></div>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="col-xl-6 mb-1 text-left">
-                <div class="form-check" style="margin-top:20%">
-                    <input type="checkbox" class="form-check-input" id="operation_detali_dislocation_reverse">
-                    <label class="form-check-label" for="operation_detali_dislocation_reverse">@IDSRWTResource.title_operation_detali_dislocation_reverse:</label>
-                </div>
-            </div>
-            <div class="col-xl-6 mb-1 text-left">
-                <label for="operation_detali_dislocation_side" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_side:</label>
-                <select class="form-control" id="operation_detali_dislocation_side" name="operation_detali_dislocation_side" required="required"></select>
-                <div class="invalid-feedback"></div>
-            </div>
-        </div>*@
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <div class="operator-detali-tables">
+                                                                    <table id="ways-dislocation-on" class="compact table table-hover" style="width:100%; table-layout: fixed"></table>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                         <div class="form-row">
                                                             <div class="col-xl-6 mb-1 text-left">
                                                                 <label for="operation_detali_dislocation_locomotive1" class="col-form-label">@IDSRWTResource.title_operation_detali_locomotive №1:</label>
@@ -375,7 +367,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row operation-dissolution">
                 <div class="col-xl-12 mb-1 mt-1">
                     <div class="card border-secondary mb-1">
@@ -477,7 +468,7 @@
                                                         </div>
                                                         <div class="form-row">
                                                             <div class="col-xl-12 mb-1 text-left">
-                                                                <label for="operation_detali_sending_way_from" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_way_from:</label>
+                                                                <label for="operation_detali_sending_way_from" class="col-form-label">@IDSRWTResource.title_operation_detali_way_from:</label>
                                                                 <input type="text" class="form-control" id="operation_detali_sending_way_from" name="operation_detali_sending_way_from" disabled="disabled" />
                                                             </div>
                                                         </div>
@@ -521,10 +512,10 @@
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
                                                             @*<div class="col-xl-6 mb-1 text-left">
-                                                            <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
-                                                            <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
-                                                            <div class="invalid-feedback"></div>
-                                                        </div>*@
+                                                                    <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
+                                                                    <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
+                                                                    <div class="invalid-feedback"></div>
+                                                                </div>*@
                                                         </div>
                                                     </fieldset>
                                                 </div>
@@ -592,11 +583,11 @@
                                                             <div class="col-xl-6 mb-1 text-left">
                                                                 <div class="form-check" style="margin-top:20%">
                                                                     <input type="checkbox" class="form-check-input" id="operation_detali_arrival_reverse">
-                                                                    <label class="form-check-label" for="operation_detali_arrival_reverse">@IDSRWTResource.title_operation_detali_arrival_reverse:</label>
+                                                                    <label class="form-check-label" for="operation_detali_arrival_reverse">@IDSRWTResource.title_operation_detali_reverse:</label>
                                                                 </div>
                                                             </div>
                                                             <div class="col-xl-6 mb-1 text-left">
-                                                                <label for="operation_detali_arrival_side" class="col-form-label">@IDSRWTResource.title_dislocation_wagon_side:</label>
+                                                                <label for="operation_detali_arrival_side" class="col-form-label">@IDSRWTResource.title_operation_detali_side:</label>
                                                                 <select class="form-control" id="operation_detali_arrival_side" name="operation_detali_arrival_side" required="required"></select>
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
