--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -324,7 +324,7 @@
                                                         <div class="invalid-feedback"></div>
                                                     </div>
                                                     <div class="col-xl-3 text-center">
-                                                        <button class="btn btn-primary" id="operation_dissolution_run" disabled="disabled">@IDSRWTResource.title_operation_dissolution_run</button>
+                                                        <button class="btn btn-primary" id="operation_dissolution_run" disabled="disabled">@IDSRWTResource.title_operation_run</button>
                                                     </div>
                                                 </div>
                                             </fieldset>
