optimise functional operation detali + update table outerways

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -388,7 +388,7 @@
                                                     <fieldset class="border-primary">
                                                         <div class="form-row text-center ">
                                                             <div class="col-xl-12 mb-1 text-left">
-                                                                <button class="btn btn-primary" id="operation_sending_run" disabled="disabled">@IDSRWTResource.title_operation_sending_run</button>
+                                                                <button class="btn btn-primary" id="operation_sending_run" disabled="disabled">@IDSRWTResource.title_operation_run</button>
                                                             </div>
 
                                                         </div>
