--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -98,7 +98,14 @@
         <div class="card border-dark mb-3">
             <div class="card-header bg-secondary text-white">Поезда по прибытию</div>
             <div class="card-body text-dark pl-3 pr-3">
-                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%;"></table>
+                <div class="row">
+                    <div class="col-xl-12" style="font-size:13px;">
+                        <table class="compact table-striped table-hover" id="table-sostav-arrival" style="width:100%; table-layout: fixed"></table>
+                    </div>
+                </div>
+
+                
+@*                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%;"></table>*@
             </div>
         </div>
     </div>
