optimise table wsd & incoming

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -133,7 +133,7 @@
                                 <div class="card-body" style="font-size:13px">
                                     <div class="row">
                                         <div class="col-xl-12">
-                                            <table id="wagons-way" class="display compact table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                            <table id="wagons-way" class="display compact table-striped table-hover" style="width:100%;table-layout: fixed"></table>
                                         </div>
                                     </div>
                                 </div>
@@ -199,7 +199,7 @@
                                                     <fieldset class="border-primary">
                                                         <div class="form-row text-center ">
                                                             <div class="col-xl-12 mb-1 text-left">
-                                                                <button class="btn btn-warning" id="operation_dislocation_run" disabled="disabled">@IDSRWTResource.title_operation_run</button>
+                                                                <button class="btn btn-primary" id="operation_dislocation_run" disabled="disabled">@IDSRWTResource.title_operation_run</button>
                                                             </div>
                                                         </div>
                                                         <div class="form-row">
