--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -17,7 +17,7 @@
 
 <body>
     <div id="lockPanel" class="LockOn">Идет загрузка…</div>
-    <nav class="navbar navbar-expand-sm bg-amkr navbar-amkr fixed-top">
+    <nav class="navbar navbar-expand-sm bg-amkr navbar-amkr fixed-top" id="nav-global">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="~/Images/amk_logo.png" width="200" height="40" class="d-inline-block align-top" alt="">
