--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -28,6 +28,9 @@
 
     <script src="~/Scripts/view/idsrwt/incoming.js"></script> <!--  -->
 }
+
+@*<input type="hidden" name="isLoggedIn" value="true" (or false) />*@
+
 <input id="username" type="hidden" value="@User.Identity.Name" />
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -99,13 +102,10 @@
             <div class="card-header bg-secondary text-white">Поезда по прибытию</div>
             <div class="card-body text-dark pl-3 pr-3">
                 <div class="row">
-                    <div class="col-xl-12" style="font-size:13px;">
-                        <table class="compact table-striped table-hover" id="table-sostav-arrival" style="width:100%; table-layout: fixed"></table>
+                    <div class="col-xl-12" style="font-size:14px;">
+                        <table class="display compact cell-border row-border hover" id="table-sostav-arrival" style="width:100%; table-layout:fixed"></table>
                     </div>
                 </div>
-
-                
-@*                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%;"></table>*@
             </div>
         </div>
     </div>
@@ -182,13 +182,14 @@
                         <div class="col-md-5 mb-1">
                             <div class="card border-success" id="card-arrived-cars">
                                 <div class="card-header">
-                                    Принятые вагоны
+                                    ПРИНЯТЫЕ ВАГОНЫ
                                 </div>
                                 <div class="card-body">
-                                    @*<h5 class="card-title">Special title treatment</h5>
-                                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>*@
-                                    <table class="table table-striped table-bordered" id="table-arrival-cars" style="width:100%; font-size:0.8rem;"></table>
+                                    <div class="row">
+                                        <div class="col-xl-12" style="font-size:14px;">
+                                            <table class="display compact cell-border row-border hover" id="table-arrival-cars" style="width:100%; font-size:0.8rem;table-layout: fixed"></table>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card-footer text-muted">
 
@@ -989,7 +990,7 @@
                 <div id="loading-cars" class="text-danger" style="display:none">
                     Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                 </div>
-                <table class="table table-striped table-bordered mb-1" id="table-list-epd-car" style="width:900px; font-size:0.8rem;"></table>
+                <table class="display compact cell-border row-border hover mb-1" id="table-list-epd-car" style="width:900px;font-size:0.8rem;table-layout:fixed"></table>
             </fieldset>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
@@ -1020,7 +1021,7 @@
             <div id="loading-cars" class="text-danger" style="display:none">
                 Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
             </div>
-            <table class="table table-striped table-bordered mb-1" id="table-list-manual-car" style="width:100%; font-size:0.8rem;"></table>
+            <table class="display compact cell-border row-border hover mb-1" id="table-list-manual-car" style="width:100%;font-size:0.8rem;table-layout:fixed"></table>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
@@ -1119,7 +1120,7 @@
     <form id="form-select-wagons">
         <fieldset class="border-primary">
             <legend class="text-primary">Вагоны</legend>
-            <table class="table table-striped table-bordered mb-1" id="table-list-wagons" style="width:160px; table-layout: fixed; margin:0; font-size:0.8rem;"></table>
+            <table class="display row-border hover mb-1" id="table-list-wagons" style="width:130px; table-layout: fixed; margin:0; font-size:0.8rem;"></table>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
