--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -209,10 +209,10 @@
         <div class="form-group row" style="margin-bottom:0.5rem">
             <label for="change_group_operator" class="col-sm-5 col-form-label">@DirectoryResource.title_add_edit_operator_car_new:</label>
             <div class="col-sm-7">
-                <select class="form-control" id="change_group_operator" name="change_group_operator" required="required"></select>
-                <div class="invalid-feedback">
-
-                </div>
+                @*<select class="form-control" id="change_group_operator" name="change_group_operator" required="required"></select>
+                    <div class="invalid-feedback"></div>*@
+                <input type="text" class="form-control" id="change_group_operator" name="change_group_operator" title="" required="required">
+                <div class="invalid-feedback"></div>
             </div>
         </div>
         <div class="form-group row" style="margin-bottom:0.5rem">
@@ -224,6 +224,7 @@
                 </div>
             </div>
         </div>
+
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
